# babata

./: .dockerignore  .gitignore  .pr_body.md  .pr_body2.md  AGENTS.md  Cargo.toml  DESIGN.md  README.md  build.rs  final-response.md  handoff.md  implementation-report.md  plan.md  pr-backend.md  pr-body-new.md  pr-body-task.md  pr-body-updated.md  pr-body.md  pr-frontend.md  result.md  task-management-design.md  verification.md  web-ui-design.md  web-ui-home-design.md  web-ui-task-management-design.md
.github/workflows/: ci.yaml  web-ui-ci.yml
agent/: Cargo.toml
agent/src/: config.rs  error.rs  lib.rs  main.rs  message.rs
agent/src/cli/: args.rs
agent/src/memory/: mod.rs
agent/src/provider/: mod.rs  openai.rs
agent/src/tool/: bash.rs  mod.rs
channels/telegram/: Cargo.toml
channels/tui/: Cargo.toml
docker/: Dockerfile  README.md  compose.yaml
docs/: architecture-v2.md
docs/superpowers/plans/: 2026-03-25-babata-dashboard.md  2026-03-27-babata-tasks-workbench.md
docs/superpowers/specs/: 2026-03-25-babata-dashboard-design.md  2026-03-27-babata-tasks-workbench-design.md  2026-04-18-channel-feedback-stale-order-design.md
services/: babata.server.plist  babata.server.plist.template  babata.server.ps1.template  babata.server.service.template  babata.service
skills/babata/: SKILL.md
src/: agent.rs  config.rs  error.rs  job.rs  jobv2.rs  lib.rs  logging.rs  main.rs  message.rs  runtime.rs  skill.rs  system_prompt.rs  task.rs  utils.rs
src/agent/: SYSTEM.md  definition.rs  mod.rs  prompt.rs  runner.rs
src/agent/babata/: agent.rs  mod.rs  system_prompt.rs
src/agent/babata/provider/: anthropic.rs  anthropic_compatible.rs  (+8 more)
src/agent/codex/: agent.rs
src/agent/opencode/: agent.rs
src/channel/: config.rs  mod.rs  telegram.rs  wechat.rs
src/cli/: agent.rs  args.rs  channel.rs  dashboard.rs  embedding.rs  job.rs  mod.rs  onboard.rs  prompt.rs  provider.rs  server.rs  task.rs  task.rs.backup
src/config/: agent.rs  channel.rs  embedding.rs  job.rs  memory.rs  mod.rs  provider.rs
src/http/: agents.rs  assets.rs  channels.rs  collaborate_task.rs  control_task.rs  count_tasks.rs  create_agent.rs  create_channel.rs  create_provider.rs  create_task.rs  delete_agent.rs  delete_channel.rs  delete_provider.rs  delete_skill.rs  delete_task.rs  error.rs  file_browser.rs  get_agent.rs  get_agent_file.rs  get_overview.rs  get_skill_file.rs  get_system.rs  get_task.rs  get_task_artifact_content.rs  get_task_children.rs  get_task_content.rs  get_task_file.rs  get_task_logs.rs  get_task_messages.rs  get_task_tree.rs  list_agent_files.rs  list_agents.rs  list_channels.rs  list_providers.rs  list_root_tasks.rs  list_skill_files.rs  list_skills.rs  list_task_artifacts.rs  list_task_files.rs  list_tasks.rs  (+9 more)
src/ingress/: job.rs
src/job/: history.rs  manager.rs  mod.rs  runner.rs  scheduler.rs
src/memory/: embedding.rs  mod.rs  search.rs  simple.rs  store.rs
src/memory/hybrid/: embedding.rs  mod.rs  search.rs  store.rs
src/memory/simple/: mod.rs  store.rs
src/message/: mod.rs  store.rs
src/provider/: anthropic.rs  anthropic_compatible.rs  config.rs  custom.rs  deepseek.rs  kimi.rs  minimax.rs  mod.rs  moonshot.rs  openai.rs  openai_compatible.rs
src/session/: mod.rs
src/system_prompt/: SYSTEM.md  mod.rs
src/task/: launcher.rs  manager.rs  mod.rs  query.rs  store.rs
src/taskv2/: manager.rs  mod.rs  store.rs
src/tool/: bash.rs  collaborate.rs  control_task.rs  count_tasks.rs  create_task.rs  delete_tasks.rs  edit_file.rs  get_task.rs  glob.rs  grep.rs  list_subtasks.rs  list_tasks.rs  mod.rs  query_messages.rs  query_tasks.rs  query_truncation.rs  read_file.rs  relaunch_task.rs  shell.rs  sleep.rs  steer_task.rs  update_task.rs  user_feedback.rs  wait_task.rs  write_file.rs
system_prompts/: AGENTS.md  IDENTITY.md  SOUL.md  USER.md
tests/: dashboard_api.rs  dashboard_cli.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
web/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  index.html  main.js  main.tsx  types.ts
web/src/api/: client.ts  types.ts
web/src/components/: AppShell.tsx  DeleteConfirmModal.css  DeleteConfirmModal.tsx  Panel.tsx  ShellToolbarContext.tsx  SidebarNav.tsx  StatusBadge.tsx  TaskDetailPanel.css  TaskDetailPanel.tsx  TaskFiles.css  TaskFiles.tsx  TaskFilter.css  TaskFilter.tsx  TaskLogs.css  TaskLogs.tsx  TaskTreeItem.css  TaskTreeItem.tsx  TaskTreeList.css  TaskTreeList.tsx  Toolbar.tsx  empty-state.tsx  error-alert.tsx  index.ts  loading-state.tsx  page-header.tsx  stat-card.tsx
web/src/hooks/: usePolling.ts
web/src/pages/: CreatePage.test.tsx  CreatePage.tsx  OverviewPage.test.tsx  OverviewPage.tsx  SystemPage.test.tsx  SystemPage.tsx  TaskDetailPage.test.tsx  TaskDetailPage.tsx  TasksPage.test.tsx  TasksPage.tsx
web/src/styles/: app.css
web/src/test/: setup.ts
web/src/utils/: tasks.test.ts  tasks.ts
(+80 files in other folders)
