[package]
name = "babata"
version = "0.1.0"
edition = "2024"
description = "AI assistant"
homepage = "https://github.com/systemxlabs/babata"
license = "MIT"
repository = "https://github.com/systemxlabs/babata"

[features]
default = []
mem-hybrid = ["dep:fastembed", "dep:libsimple", "dep:sqlite-vec"]

[dependencies]
aes = "0.8"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
backon = "1.6"
base64 = "0.22"
block-padding = "0.3"
bytemuck = "1.25"
cipher = "0.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
ecb = "0.1"
fastembed = { version = "5.11", optional = true }
hex = "0.4"
libsimple = { version = "0.7", optional = true }
log = "0.4"
logforth = { version = "0.29.1", features = ["starter-log"] }
mime_guess = "2"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = { version = "8", features = [
  "include-flate",
  "include-exclude",
  "interpolate-folder-path",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3.1"
sqlite-vec = { version = "0.1", optional = true }
telegram-markdown-v2 = "0.2"
teloxide = "0.13"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
rand = "0.8"
wechat-agent-rs = "0.1.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
