[package]
name = "babata-agent"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "babata-cli"
path = "src/bin/cli.rs"

[dependencies]
async-trait = { workspace = true }
mime = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }