[package]
name = "babata"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
mime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true, features = ["v4"] }